# omg-scotus

./: .pre-commit-config.yaml  LICENSE  README.md  authorship.ipynb  main.py  requirements.txt  setup.cfg
omg_scotus/: _enums.py  authorship_attribution.py  case.py  daemon.py  document_list.py  fetcher.py  helpers.py  justice.py  main.py  opinion.py  order.py  order_list.py  order_list_section.py  parser.py  release.py  section.py  tweet.py  website_change_detector.py
tests/: conftest.py  fetcher_test.py  helpers_test.py  justice_test.py  main_test.py  opinion_test.py  order_list_test.py
