[metadata]
name = omg_scotus
version = 0.0.0
description = this package brings you the latest SCOTUS scuttlebutt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iancontijoch/omg-scotus
author = Ian Contijoch
author_email = ian.contijoch@gmail.com

[options]
packages = find:
install_requires =
    beautifulsoup4
    dateparser
    pdfplumber
    pre-commit
    requests

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    omg-scotus-cli = omg_scotus.main:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
